Fixed bug #46115 (Memory leak when calling a method using Reflection)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@266529 c90b9560-bf6c-de11-be94-00142212c4b1